# minichat

./: README.md  pyproject.toml
minichat/: adamw.py  checkpoint.py  checkpoint_manager.py  common.py  core_eval.py  dataloader.ipynb  dataloader.py  dataset.py  engine.ipynb  engine.py  evaluate_model.ipynb  evaluation.ipynb  gpt.ipynb  gpt.py  loss_eval.py  tokenizer.py
scripts/: base_eval.py  base_train.py  tok_train.py
